update reflection section

--- a/EDA_Red_Wine_Quality.rmd
+++ b/EDA_Red_Wine_Quality.rmd
@@ -680,4 +680,6 @@ In the bivariate section, we explored how two variables interact with one anothe
 
 At the end, we explored multiple variables and their interaction to one another. It was evident that density did not play much of a role in determining the quality. But on the other hand, given the direct correlation of density to alcohol, it was worth exploring. When added to the linear model and plotting the coefficients of the model, it became evident that density plays a tiny bit of role in predicting the quality. When cross referencing the predicted values with random sample from original dataset, we got a very close value of the fir to the actual quality rating. 
 
-However, none of the parameters except for alcohol stood out deterministically. This can be the effect of personal preference. These ratings were given by experts based on sensory feelings. In such case, a-priory information, prejudice, personal preference etc. play a big role and brings in a certain level of unpredictibiltiy in the judgements. 
+However, none of the parameters except for alcohol stood out deterministically. This can be the effect of personal preference. These ratings were given by experts based on sensory feelings. In such case, a-priory information, prejudice, personal preference etc. play a big role and brings in a certain level of unpredictibiltiy in the judgements.
+
+The analysis of red wines was all about exploring the data and get the feel for it. The most difficult part for me was to ensure that no relationship is left unexplored. The ggpair plots and coefficient plots gave a good sense of understanding of the relationships between variables. The dataset itself could have been richer in terms of variables and data points to infer more out of it. Perhaps more data from different sources can be attached to this set in order to open up the possibility of inferring more. Although, the predictive model we created did a pretty decent job for randomly chosen points. 
